RESOLVED FIXED105338
WebProcesses often crash if they access the network after a NetworkProcess crash
https://bugs.webkit.org/show_bug.cgi?id=105338
Summary WebProcesses often crash if they access the network after a NetworkProcess crash
Brady Eidson
Reported 2012-12-18 12:53:09 PST
WebProcesses often crash if they access the network after a NetworkProcess crash. One easily reproducible example is to go to CNN.com, then `killall -9 NetworkProcess`, then refresh CNN.com. Under cookiesForDOM or setCookiesFromDOM, you'll see an ASSERT accessing the NetworkProcessConnection in a debug build or a crash using it in a release build. In radar as <rdar://problem/12865789>
Attachments
Patch v1 (1.83 KB, patch)
2012-12-18 12:56 PST, Brady Eidson
ap: review+
Brady Eidson
Comment 1 2012-12-18 12:56:33 PST
Created attachment 180008 [details] Patch v1
Brady Eidson
Comment 2 2012-12-18 13:10:10 PST
Note You need to log in before you can comment on or make changes to this bug.