WebProcesses often crash if they access the network after a NetworkProcess crash. <rdar://problem/12865789> and https://bugs.webkit.org/show_bug.cgi?id=105338

Reviewed by Alexey Proskuryakov.

After a NetworkProcess crash we should try to re-establish a connection to a new NetworkProcess
when it is needed.

If that attempt fails, then the WebProcess should "cleanly" crash.

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::networkConnection):

Canonical link: https://commits.webkit.org/123564@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138060 268f45cc-cd09-0410-ab3c-d52691b4dbfc